# research-misc

./: .gitmodules
benchmark/: .gitignore  CMakeLists.txt  results.csv
benchmark/include/: converters.h  loaders.h
benchmark/sample-data/: config.toml  nation.tbl  region.tbl
benchmark/scripts/: build.sh  generate_data.py
benchmark/src/: converters.cc  generate_data.cc  loaders.cc  main.cc
